[package]
name = "uml_metamodel"
version = "0.1.0"
edition = "2021"
license = "MIT"
[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
