[package]
name = "uml_arena"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

[dependencies]
lazy_static = "1.5.0"
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.105"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tsify = "0.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce parallel codegen for better optimization
panic = "abort"      # Reduce binary size
strip = true         # Strip symbols

[profile.release.package."*"]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
